<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:weightSum="100"
        android:gravity="center_vertical"
        android:background="@color/colorBackground"
        >

        <TextView
            android:id="@+id/textViewCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_weight="33"
            android:gravity="center_vertical"
            android:text="@string/company_name" />

        <TextView
            android:id="@+id/textViewJobName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="33"
            android:text="@string/job_name"
             />

        <TextView
            android:id="@+id/textViewJobStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:layout_weight="33"
            android:text="@string/job_status" />
    </LinearLayout>
</LinearLayout>